<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/titleCoefficientA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/title_coefficient_a" />

    <EditText
        android:id="@+id/edtCoefficientA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/titleCoefficientB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4"
        android:text="@string/title_coefficient_b" />

    <EditText
        android:id="@+id/edtCoefficientB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="do_solution"
            android:id="@+id/btnSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_solution" />

        <Button
            android:onClick="do_next"
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_next" />

        <Button
            android:onClick="do_exit"
            android:id="@+id/btnExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_exit" />
    </LinearLayout>

    <TextView
        android:id="@+id/titleResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="#FFEB3B"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txtChooseLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strChooseLanguage"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/languageButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnEnglish" />

        <Button
            android:id="@+id/btnVietnamese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnVietnamese" />

        <Button
            android:id="@+id/btnKorean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnKorean" />

        <Button
            android:id="@+id/btnFrench"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFrench" />
    </LinearLayout>
</LinearLayout>